Fix section alignment issues

--- a/foundations/flex/04-flex-information/style.css
+++ b/foundations/flex/04-flex-information/style.css
@@ -1,5 +1,19 @@
 body {
-  font-family: 'Courier New', Courier, monospace;
+  font-family: "Courier New", Courier, monospace;
+  text-align: center;
+}
+
+.section {
+  display: flex;
+  gap: 52px;
+  justify-content: center;
+}
+
+.first,
+.second,
+.third,
+.fourth {
+  max-width: 200px;
 }
 
 img {
@@ -10,6 +24,7 @@ img {
 .title {
   font-size: 36px;
   font-weight: 900;
+  margin-bottom: 32px;
 }
 
 /* do not edit this footer */
